[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Scripts/UI_States/DialogueRect.gd" type="Script" id=2]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=3]
[ext_resource path="res://addons/GodotTIE/GodotTIE_icon.png" type="Texture" id=4]
[ext_resource path="res://Cave-Story.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/UI_States/MainMenuOption.gd" type="Script" id=6]
[ext_resource path="res://Scripts/UI_States/InventoryRect.gd" type="Script" id=7]
[ext_resource path="res://Scripts/UI_States/Idle.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="UI" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="DialogueRect" type="ColorRect" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 820.0
margin_right = 1890.0
margin_bottom = 1040.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Margin", "Rect", "Visibility" ]

[node name="DialogueText" type="ReferenceRect" parent="DialogueRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1860.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = SubResource( 1 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[node name="MainMenuOption" type="ColorRect" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1569.0
margin_top = 78.0
margin_right = 1873.0
margin_bottom = 978.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuOption" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 304.0
margin_bottom = 900.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Focus", "Mouse" ]

[node name="inventory_button" type="Button" parent="MainMenuOption/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 428.0
margin_right = 304.0
margin_bottom = 448.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "inventory"
flat = false
align = 1

[node name="statut_button" type="Button" parent="MainMenuOption/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 452.0
margin_right = 304.0
margin_bottom = 472.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Statut"
flat = false
align = 1

[node name="InventoryRect" type="ColorRect" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 569.0
margin_top = 95.0
margin_right = 1408.0
margin_bottom = 667.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
script = ExtResource( 7 )
_sections_unfolded = [ "Visibility" ]

[node name="ItemList" type="ItemList" parent="InventoryRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 17.0
margin_top = 17.0
margin_right = 822.0
margin_bottom = 556.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Columns" ]

[node name="Idle" type="ColorRect" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
script = ExtResource( 8 )

[connection signal="pressed" from="MainMenuOption/VBoxContainer/inventory_button" to="MainMenuOption" method="_on_inventory_button_pressed"]

[connection signal="item_activated" from="InventoryRect/ItemList" to="InventoryRect" method="_on_ItemList_item_activated"]


